--- a/resources/assets/css/home/style.css
+++ b/resources/assets/css/home/style.css
@@ -551,6 +551,17 @@ label.error { font-size:12px; color:#f00; display:block; padding-left:120px;}
 
 .hos-level,.hos-insu { padding:0 8px; color:#f9a822; height:24px; line-height:24px; font-size:14px; background:#ffeed1; display:inline-block; margin:8px 24px 0 0;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;}
 .hos-insu { padding:0 16px; color:#4888df;background:#dcebff;}
+.btn-leave-message {
+    position: fixed;
+    bottom: 30px;
+    z-index: 2147483647;
+    line-height: 1.2;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    font-family: 'Helvetica Neue', Helvetica, Arial, 'Hiragino Sans GB', 'Microsoft YaHei', sans-serif;
+    background-color: transparent;
+}
 
 /* 移动端适配 */
 @media (min-width: 991px) and (max-width: 1199px) {
