--- a/resources/assets/css/home/style.css
+++ b/resources/assets/css/home/style.css
@@ -247,7 +247,7 @@ a{color: #333;hide-focus: expression( this.hideFocus=true );outline: none;}
 .doc_list_txt { font-size:14px; color:#666; height:70px; line-height:70px; padding-left:10px;}
 .mn { border:1px solid #e5e5e5;}
 
-.doc_list_l{ float:left; width:832px; overflow:hidden;}
+.doc_list_l{ float:left; width:100%; overflow:hidden;}
 
 .doc_list_1{height:200px; border-bottom:1px solid #e6e6e6; overflow:hidden; margin:0 30px;}
 .doc_list_1 .doc-img{ float:left;-moz-border-radius: 50%;-webkit-border-radius: 50%;border-radius:50%; margin:45px 35px 0 10px;}
@@ -358,8 +358,8 @@ a{color: #333;hide-focus: expression( this.hideFocus=true );outline: none;}
 
 /* 全部科室 */
 .all-ks-tj { margin-bottom:0;}
-.m-all-ks { width:900px;}
-.all-ks { width:369px; height:175px; padding:15px; border:1px solid #e5e5e5; margin:30px 30px 0 0;}
+.m-all-ks { width:100%;}
+.all-ks { width:356px; height:175px; padding:15px; border:1px solid #e5e5e5; margin:30px 12px 0 0;}
 .all-ks dt{ height:50px; border-bottom:1px dashed #eee; line-height:40px; margin-bottom:20px;}
 .all-ks dt span{ font-size:16px; color:#3073ce;}
 .all-ks dt span a{color:#3073ce;}
@@ -367,26 +367,9 @@ a{color: #333;hide-focus: expression( this.hideFocus=true );outline: none;}
 .all-ks dt em a{color:#666;}
 .all-ks dt i { float:left; width:40px; height:40px;margin-right:15px;}
 .all-ks dt i img{ width:100%; height:100%;}
-/*.all-ks dt i { float:left; width:40px; height:38px; background:url(../images/ico-ks.png) no-repeat; margin-right:15px;}
-.all-ks1 dt i { background-position:0 0;}
-.all-ks2 dt i { background-position:0 -38px;}
-.all-ks3 dt i { background-position:0 -76px;}
-.all-ks4 dt i { background-position:0 -114px;}
-.all-ks5 dt i { background-position:0 -152px;}
-.all-ks6 dt i { background-position:0 -190px;}
-.all-ks7 dt i { background-position:0 -228px;}
-.all-ks8 dt i { background-position:0 -266px;}
-.all-ks9 dt i { background-position:0 -304px;}
-.all-ks10 dt i { background-position:0 -342px;}
-.all-ks11 dt i { background-position:0 -380px;}
-.all-ks12 dt i { background-position:0 -418px;}
-.all-ks13 dt i { background-position:0 -456px;}
-.all-ks14 dt i { background-position:0 -494px;}*/
-
 .all-ks dd{ text-align:right; height:32px; line-height:32px; overflow:hidden; font-size:14px; color:#73b52d;}
 .all-ks dd a{ text-align:left; float:left; width:210px; overflow:hidden; padding-left:10px; color:#666;text-overflow:ellipsis; white-space:nowrap; }
 .all-ks dd span{padding-left:15px; color:#3073ce;}
-
 /* 支付页面 */
 .m-pay { background:#f3f8ff; border:1px solid #e2eeff; padding:30px 20px;}
 .m-pay h2{ height:50px; border-bottom:2px solid #3073ce; padding-left:45px; font-size:16px; color:#3073ce;}
